--- a/views/index.ejs
+++ b/views/index.ejs
@@ -58,7 +58,7 @@
                    
                     <div class="first-slot">
                         <div class="masonry-box post-media">
-                             <img src="<%=data[0].banner%>" alt="" class="img-fluid">
+                             <img src="<%=data[0].banner%>" alt="" class="img-fluid" style="width: 783px; height: 449px;">
                              <div class="shadoweffect">
                                 <div class="shadow-desc">
                                     <div class="blog-meta">
@@ -74,7 +74,7 @@
 
                     <div class="second-slot">
                         <div class="masonry-box post-media">
-                             <img src="<%=data[1].banner%>" alt="" class="img-fluid">
+                             <img src="<%=data[1].banner%>" alt="" class="img-fluid" style="width: 394px; height: 449px;">
                              <div class="shadoweffect">
                                 <div class="shadow-desc">
                                     <div class="blog-meta">
@@ -90,7 +90,7 @@
 
                       <div class="last-slot">
                         <div class="masonry-box post-media">
-                             <img src="<%=data[2].banner%>" alt="" class="img-fluid " >
+                             <img src="<%=data[2].banner%>" alt="" class="img-fluid " style="width: 394px; height: 449px;" >
                              <div class="shadoweffect">
                                 <div class="shadow-desc">
                                     <div class="blog-meta">
