--- a/views/tech-single.ejs
+++ b/views/tech-single.ejs
@@ -63,7 +63,7 @@
                                     <li class="breadcrumb-item active"><%=data.title%></li>
                                 </ol>
 
-                                <span class="color-orange"><a href="tech-category-01.html" title=""><%=data.tag%></a></span>
+                                <span class="color-orange " ><a href="tech-category-01.html" title=""><%=data.tag%></a></span>
 
                                 <h3><%=data.title%></h3>
 
@@ -76,7 +76,7 @@
                                 <div class="post-sharing">
                                     <ul class="list-inline">
                                         <li><a id="facebook-share-link"class="fb-button btn btn-primary"><i class="fa fa-facebook"></i> <span class="down-mobile">Share on Facebook</span></a></li>
-                                        <!-- <li><a id="instagram-share-link"  class="tw-button btn btn-danger"><i class="fa fa-instagram"></i> <span class="down-mobile">Share on Instagram</span></a></li> -->
+                                        <li> <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="tw-button btn btn-primary" data-show-count="false"><i class="fa fa-twitter" aria-hidden="true"></i><span class="down-mobile">Share on Twitter</span> </a></li>
                                       
                                     </ul>
                                 </div><!-- end post-sharing -->
@@ -100,18 +100,19 @@
                             </div><!-- end content -->
 
                             <div class="blog-title-area">
-                                <div class="tag-cloud-single">
+                                <!-- <div class="tag-cloud-single">
                                     <span>Tags</span>
                                     <small><a href="#" title="">lifestyle</a></small>
                                     <small><a href="#" title="">colorful</a></small>
                                     <small><a href="#" title="">trending</a></small>
                                     <small><a href="#" title="">another tag</a></small>
-                                </div><!-- end meta -->
+                                </div>end meta -->
 
                                 <div class="post-sharing">
                                     <ul class="list-inline">
                                         <li><a id="facebook-share-link"class="fb-button btn btn-primary"><i class="fa fa-facebook"></i> <span class="down-mobile">Share on Facebook</span></a></li>
-                                        <!-- <li><a id="instagram-share-link"  class="tw-button btn btn-primary"><i class="fa fa-instagram"></i> <span class="down-mobile">Share on Instagram</span></a></li> -->
+                                        <li> <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="tw-button btn btn-primary" data-show-count="false"><i class="fa fa-twitter" aria-hidden="true"></i><span class="down-mobile">Share on Twitter</span> </a></li>
+                                      
                                         
                                     </ul>
                                 </div><!-- end post-sharing -->
@@ -176,14 +177,14 @@
                                             <%-author.desc%>
                                         </p>
 
-                                        <div class="topsocial">
+                                        <!-- <div class="topsocial">
                                             <a href="#" data-toggle="tooltip" data-placement="bottom" title="Facebook"><i class="fa fa-facebook"></i></a>
                                             <a href="#" data-toggle="tooltip" data-placement="bottom" title="Youtube"><i class="fa fa-youtube"></i></a>
                                             <a href="#" data-toggle="tooltip" data-placement="bottom" title="Pinterest"><i class="fa fa-pinterest"></i></a>
                                             <a href="#" data-toggle="tooltip" data-placement="bottom" title="Twitter"><i class="fa fa-twitter"></i></a>
                                             <a href="#" data-toggle="tooltip" data-placement="bottom" title="Instagram"><i class="fa fa-instagram"></i></a>
                                             <a href="#" data-toggle="tooltip" data-placement="bottom" title="Website"><i class="fa fa-link"></i></a>
-                                        </div><!-- end social -->
+                                        </div>end social -->
 
                                     </div><!-- end col -->
                                 </div><!-- end row -->
@@ -470,6 +471,7 @@
     <script src="js/tether.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/custom.js"></script>
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
      <script>
         
          var url=window.location.href;
