--- a/Public/css/colors.css
+++ b/Public/css/colors.css
@@ -24,7 +24,7 @@ a:focus,
 .navbar-inverse .navbar-nav .nav-link.active,
 .navbar-inverse .navbar-nav .nav-link.open,
 .navbar-inverse .navbar-nav .open > .nav-link {
-    color: #3197d6 !important;
+    color: #d9534f !important;
 }
 
 .dmtop,
@@ -32,7 +32,7 @@ a:focus,
 .search-form .btn:focus,
 .search-form .btn {
     color: #ffffff !important;
-    background-color: #3197d6 !important;
+    background-color: #d9534f !important;
 }
 
 .tag-cloud-single span,
@@ -42,15 +42,15 @@ a:focus,
 .btn:focus,
 .navbar-inverse .navbar-toggler {
     color: #ffffff !important;
-    background-color: #3197d6;
+    background-color: #d9534f;
 }
 
 .blockquote {
-    border-left-color: #3197d6;
+    border-left-color: #d9534f;
 }
 
 .footer .widget-title {
-    border-color: #3197d6;
+    border-color: #d9534f;
 }
 
 
