--- a/Public/css/version/tech.css
+++ b/Public/css/version/tech.css
@@ -278,14 +278,14 @@ a:focus {
 .btn:hover,
 .btn:focus {
     color: #ffffff !important;
-    background: rgba(0, 0, 0, 0) linear-gradient(to right, #0091e5 0px, #00b7e5 100%) repeat scroll 0 0 !important
+    background: rgba(0, 0, 0, 0) linear-gradient(to right, #d9534f 0px, #e57400 100%) repeat scroll 0 0 !important
 }
 
 .tag-cloud-single span,
 .navbar-inverse {
     color: #ffffff !important;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
-    background: rgba(0, 0, 0, 0) linear-gradient(to right, #0091e5 0px, #00b7e5 100%) repeat scroll 0 0 !important
+    background: rgba(0, 0, 0, 0) linear-gradient(to right, #d9534f 0px, #e57400 100%) repeat scroll 0 0 !important
 }
 
 .gp-button.btn-primary:hover,
