--- a/views/index.ejs
+++ b/views/index.ejs
@@ -55,54 +55,40 @@
         <section class="section first-section">
             <div class="container-fluid">
                 <div class="masonry-blog clearfix">
+                    
+                        <div class="first-slot item">
+                            <div class="masonry-box post-media">
+                                 <img src="<%=data[0].banner%>" alt="" class="img-fluid" style="width: 783px; height: 449px;">
+                                 <div class="shadoweffect">
+                                    <div class="shadow-desc">
+                                        <div class="blog-meta">
+                                            <span class="bg-orange"><a href="/<%=(data[0].tag).toLowerCase()%>" title=""><%=data[0].tag%></a></span>
+                                            <h4><a href="/single?id=<%=data[0].id%>" title=""><%=data[0].title%></a></h4>
+                                            <small><a href="/single?id=<%=data[0].id%>" title=""><%=data[0].date%></a></small>
+                                            <small><a href="/author" title="">by <%=data[0].by%></a></small>
+                                        </div><!-- end meta -->
+                                    </div><!-- end shadow-desc -->
+                                </div><!-- end shadow -->
+                            </div><!-- end post-media -->
+                        </div><!-- end first-side -->
                    
-                    <div class="first-slot">
-                        <div class="masonry-box post-media">
-                             <img src="<%=data[0].banner%>" alt="" class="img-fluid" style="width: 783px; height: 449px;">
-                             <div class="shadoweffect">
-                                <div class="shadow-desc">
-                                    <div class="blog-meta">
-                                        <span class="bg-orange"><a href="/<%=(data[0].tag).toLowerCase()%>" title=""><%=data[0].tag%></a></span>
-                                        <h4><a href="/single?id=<%=data[0].id%>" title=""><%=data[0].title%></a></h4>
-                                        <small><a href="/single?id=<%=data[0].id%>" title=""><%=data[0].date%></a></small>
-                                        <small><a href="/author" title="">by <%=data[0].by%></a></small>
-                                    </div><!-- end meta -->
-                                </div><!-- end shadow-desc -->
-                            </div><!-- end shadow -->
-                        </div><!-- end post-media -->
-                    </div><!-- end first-side -->
+                   
+                        <div class="first-slot item">
+                            <div class="masonry-box post-media">
+                                 <img src="<%=data[1].banner%>" alt="" class="img-fluid" style="width: 783px; height: 449px;">
+                                 <div class="shadoweffect">
+                                    <div class="shadow-desc">
+                                        <div class="blog-meta">
+                                            <span class="bg-orange"><a href="/<%=(data[1].tag).toLowerCase()%>" title=""><%=data[1].tag%></a></span>
+                                            <h4><a href="/single?id=<%=data[1].id%>" title=""><%=data[1].title%></a></h4>
+                                            <small><a href="/single?id=<%=data[1].id%>" title=""><%=data[1].date%></a></small>
+                                            <small><a href="/author" title="">by <%=data[1].by%></a></small>
+                                        </div><!-- end meta -->
+                                    </div><!-- end shadow-desc -->
+                                </div><!-- end shadow -->
+                            </div><!-- end post-media -->
+                        </div><!-- end first-side -->
 
-                    <div class="second-slot">
-                        <div class="masonry-box post-media">
-                             <img src="<%=data[1].banner%>" alt="" class="img-fluid" style="width: 394px; height: 449px;">
-                             <div class="shadoweffect">
-                                <div class="shadow-desc">
-                                    <div class="blog-meta">
-                                        <span class="bg-orange"><a href="/<%=(data[1].tag).toLowerCase()%>" title=""><%=data[1].tag%></a></span>
-                                        <h4><a href="/single?id=<%=data[1].id%>" title=""><%=data[1].title%></a></h4>
-                                        <small><a href="/single?id=<%=data[1].id%>" title=""><%=data[1].date%></a></small>
-                                        <small><a href="/author" title="">by <%=data[1].by%></a></small>
-                                    </div><!-- end meta -->
-                                </div><!-- end shadow-desc -->
-                             </div><!-- end shadow -->
-                        </div><!-- end post-media -->
-                    </div><!-- end second-side -->
-
-                      <div class="last-slot">
-                        <div class="masonry-box post-media">
-                             <img src="<%=data[2].banner%>" alt="" class="img-fluid " style="width: 394px; height: 449px;" >
-                             <div class="shadoweffect">
-                                <div class="shadow-desc">
-                                    <div class="blog-meta">
-                                        <span class="bg-orange"><a href="/<%=(data[2].tag).toLowerCase()%>" title=""><%=data[2].tag%></a></span>
-                                        <h4><a href="/single?id=<%=data[1].id%>" title=""><%=data[2].title%></a></h4>
-                                        <small><a href="/single?id=<%=data[2].id%>" title=""><%=data[2].date%></a></small>
-                                        <small><a href="/author" title="">by <%=data[2].by%></a></small>
-                                    </div><!-- end meta -->
-                                </div><!-- end shadow-desc -->
-                             </div><!-- end shadow -->
-                        </div><!-- end post-media -->
-                    </div><!-- end second-side -->
                 </div><!-- end masonry -->
             </div>
         </section>
@@ -129,7 +115,7 @@
                                     </div><!-- end col -->
 
                                     <div class="blog-meta big-meta col-md-8">
-                                        <h4><a href="/single?id=<%=data[i].id%>" title=""><%=data[i].title%></a></h4>
+                                        <h4><a href="/single?id=<%=data[i].id%>" title=""><%=(data[i].title)%></a></h4>
                                         <p><%=data[i].short%></p>
                                         <small class="firstsmall"><a class="bg-orange" href="/gadget" title=""><%=data[i].tag%></a></small>
                                         <small><a href="/single?id=<%=data[i].id%>" title=""><%=data[i].date%></a></small>
@@ -218,56 +204,7 @@
                                 </div><!-- end banner -->
                             </div><!-- end widget -->
 
-                            <div class="widget">
-                                <h2 class="widget-title">Trend Videos</h2>
-                                <div class="trend-videos">
-                                    <div class="blog-box">
-                                        <div class="post-media">
-                                            <a href="/single" title="">
-                                                <img src="upload/tech_video_01.jpg" alt="" class="img-fluid">
-                                                <div class="hovereffect">
-                                                    <span class="videohover"></span>
-                                                </div><!-- end hover -->
-                                            </a>
-                                        </div><!-- end media -->
-                                        <div class="blog-meta">
-                                            <h4><a href="/single" title="">We prepared the best 10 laptop presentations for you</a></h4>
-                                        </div><!-- end meta -->
-                                    </div><!-- end blog-box -->
-
-                                    <hr class="invis">
-
-                                    <div class="blog-box">
-                                        <div class="post-media">
-                                            <a href="/single" title="">
-                                                <img src="upload/tech_video_02.jpg" alt="" class="img-fluid">
-                                                <div class="hovereffect">
-                                                    <span class="videohover"></span>
-                                                </div><!-- end hover -->
-                                            </a>
-                                        </div><!-- end media -->
-                                        <div class="blog-meta">
-                                            <h4><a href="/single" title="">We are guests of ABC Design Studio - Vlog</a></h4>
-                                        </div><!-- end meta -->
-                                    </div><!-- end blog-box -->
-
-                                    <hr class="invis">
-
-                                    <div class="blog-box">
-                                        <div class="post-media">
-                                            <a href="/single" title="">
-                                                <img src="upload/tech_video_03.jpg" alt="" class="img-fluid">
-                                                <div class="hovereffect">
-                                                    <span class="videohover"></span>
-                                                </div><!-- end hover -->
-                                            </a>
-                                        </div><!-- end media -->
-                                        <div class="blog-meta">
-                                            <h4><a href="/single" title="">Both blood pressure monitor and intelligent clock</a></h4>
-                                        </div><!-- end meta -->
-                                    </div><!-- end blog-box -->
-                                </div><!-- end videos -->
-                            </div><!-- end widget -->
+                            
 
                             <div class="widget">
                                 <h2 class="widget-title">Popular Posts</h2>
@@ -276,7 +213,7 @@
                                         <a href="/single?id=<%=data[0].id%>" class="list-group-item list-group-item-action flex-column align-items-start">
                                             <div class="w-100 justify-content-between">
                                                 <img src="<%=data[0].banner%>" alt="" class="img-fluid float-left">
-                                                <h5 class="mb-1"><%=data[0].title%></h5>
+                                                <h5 class="mb-1"><%=(data[0].title).slice(0,30)%>...</h5>
                                                 <small><%=data[0].date%></small>
                                             </div>
                                         </a>
@@ -284,7 +221,7 @@
                                         <a href="/single?id=<%=data[1].id%>" class="list-group-item list-group-item-action flex-column align-items-start">
                                             <div class="w-100 justify-content-between">
                                                 <img src="<%=data[1].banner%>" alt="" class="img-fluid float-left">
-                                                <h5 class="mb-1"><%=data[1].title%></h5>
+                                                <h5 class="mb-1"><%=(data[1].title).slice(0,30)%>...</h5>
                                                 <small><%=data[1].date%></small>
                                             </div>
                                         </a>
@@ -292,7 +229,7 @@
                                         <a href="/single?id=<%=data[2].id%>" class="list-group-item list-group-item-action flex-column align-items-start">
                                             <div class="w-100 last-item justify-content-between">
                                                 <img src="<%=data[2].banner%>" alt="" class="img-fluid float-left">
-                                                <h5 class="mb-1"><%=data[2].title%></h5>
+                                                <h5 class="mb-1"><%=(data[2].title).slice(0,30)%>...</h5>
                                                 <small><%=data[2].date%></small>
                                             </div>
                                         </a>
@@ -301,50 +238,11 @@
                             </div><!-- end widget -->
 
                             <div class="widget">
-                                <h2 class="widget-title">Recent Reviews</h2>
+                                <h2 class="widget-title">B </h2>
                                 <div class="blog-list-widget">
                                     <div class="list-group">
-                                        <a href="/reviews?id=<%=data[0].id%>" class="list-group-item list-group-item-action flex-column align-items-start">
-                                            <div class="w-100 justify-content-between">
-                                                <img src="<%=data[0].banner%>" alt="" class="img-fluid float-left">
-                                                <h5 class="mb-1"><%=data[0].title%></h5>
-                                                <span class="rating">
-                                                    <%var star =data[0].star%>
-                                                    <%for(i=0;i<star;i++){%>
-                                                        <i class="fa fa-star"></i>
-                                                    <%}%>
+                                       
 
-                                                    
-                                                    
-                                                </span>
-                                            </div>
-                                        </a>
-
-                                        <a href="/reviews?id=<%=data[1].id%>" class="list-group-item list-group-item-action flex-column align-items-start">
-                                            <div class="w-100 justify-content-between">
-                                                <img src="<%=data[1].banner%>" alt="" class="img-fluid float-left">
-                                                <h5 class="mb-1"><%=data[1].title%></h5>
-                                                <span class="rating">
-                                                    <%var star =data[1].star%>
-                                                    <%for(i=0;i<star;i++){%>
-                                                        <i class="fa fa-star"></i>
-                                                    <%}%>
-                                                </span>
-                                            </div>
-                                        </a>
-
-                                        <a href="/reviews?id=<%=data[2].id%>" class="list-group-item list-group-item-action flex-column align-items-start">
-                                            <div class="w-100 last-item justify-content-between">
-                                                <img src="<%=data[2].banner%>" alt="" class="img-fluid float-left">
-                                                <h5 class="mb-1"><%=data[2].title%></h5>
-                                                <span class="rating">
-                                                    <%var star =data[2].star%>
-                                                    <%for(i=0;i<star;i++){%>
-                                                        <i class="fa fa-star"></i>
-                                                    <%}%>
-                                                </span>
-                                            </div>
-                                        </a>
                                     </div>
                                 </div><!-- end blog-list -->
                             </div><!-- end widget -->
