--- a/views/tech-single.ejs
+++ b/views/tech-single.ejs
@@ -122,7 +122,12 @@
                                 <div class="col-lg-12">
                                     <div class="banner-spot clearfix">
                                         <div class="banner-img">
-                                            <img src="upload/banner_01.jpg" alt="" class="img-fluid">
+                                            
+
+
+
+
+
                                         </div><!-- end banner-img -->
                                     </div><!-- end banner -->
                                 </div><!-- end col -->
@@ -135,11 +140,11 @@
                                     <div class="col-lg-6">
                                         <div class="blog-list-widget">
                                             <div class="list-group">
-                                                <a href="/single" class="list-group-item list-group-item-action flex-column align-items-start">
+                                                <a href="/single?id=<%=blog[6].id%>" class="list-group-item list-group-item-action flex-column align-items-start">
                                                     <div class="w-100 justify-content-between text-right">
-                                                        <img src="upload/tech_menu_19.jpg" alt="" class="img-fluid float-right">
-                                                        <h5 class="mb-1">5 Beautiful buildings you need to before dying</h5>
-                                                        <small>Prev Post</small>
+                                                        <img src="<%=blog[6].banner%>" alt="" class="img-fluid float-right">
+                                                        <h5 class="mb-1">5<%=blog[6].title%></h5>
+                                                        
                                                     </div>
                                                 </a>
                                             </div>
@@ -149,11 +154,11 @@
                                     <div class="col-lg-6">
                                         <div class="blog-list-widget">
                                             <div class="list-group">
-                                                <a href="/single" class="list-group-item list-group-item-action flex-column align-items-start">
+                                                <a href="/single?id=<%=blog[7].id%>" class="list-group-item list-group-item-action flex-column align-items-start">
                                                     <div class="w-100 justify-content-between">
-                                                        <img src="upload/tech_menu_20.jpg" alt="" class="img-fluid float-left">
-                                                        <h5 class="mb-1">Let's make an introduction to the glorious world of history</h5>
-                                                        <small>Next Post</small>
+                                                        <img src="<%=blog[7].banner%>" alt="" class="img-fluid float-left">
+                                                        <h5 class="mb-1">5<%=blog[7].title%></h5>
+                                                        
                                                     </div>
                                                 </a>
                                             </div>
@@ -177,15 +182,7 @@
                                             <%-author.desc%>
                                         </p>
 
-                                        <!-- <div class="topsocial">
-                                            <a href="#" data-toggle="tooltip" data-placement="bottom" title="Facebook"><i class="fa fa-facebook"></i></a>
-                                            <a href="#" data-toggle="tooltip" data-placement="bottom" title="Youtube"><i class="fa fa-youtube"></i></a>
-                                            <a href="#" data-toggle="tooltip" data-placement="bottom" title="Pinterest"><i class="fa fa-pinterest"></i></a>
-                                            <a href="#" data-toggle="tooltip" data-placement="bottom" title="Twitter"><i class="fa fa-twitter"></i></a>
-                                            <a href="#" data-toggle="tooltip" data-placement="bottom" title="Instagram"><i class="fa fa-instagram"></i></a>
-                                            <a href="#" data-toggle="tooltip" data-placement="bottom" title="Website"><i class="fa fa-link"></i></a>
-                                        </div>end social -->
-
+                                       
                                     </div><!-- end col -->
                                 </div><!-- end row -->
                             </div><!-- end author-box -->
@@ -199,37 +196,38 @@
                                         <div class="blog-box">
                                             <div class="post-media">
                                                 <a href="/single" title="">
-                                                    <img src="upload/tech_menu_04.jpg" alt="" class="img-fluid">
+                                                    <img src="<%=blog[4].banner%>" alt="" class="img-fluid">
                                                     <div class="hovereffect">
                                                         <span class=""></span>
                                                     </div><!-- end hover -->
                                                 </a>
                                             </div><!-- end media -->
                                             <div class="blog-meta">
-                                                <h4><a href="/single" title="">We are guests of ABC Design Studio</a></h4>
-                                                <small><a href="blog-category-01.html" title="">Trends</a></small>
-                                                <small><a href="blog-category-01.html" title="">21 July, 2017</a></small>
+                                                <h4><a href="/single" title=""><%=blog[4].title%></a></h4>
+                                                <small><p><%=blog[4].tag%></p></small>
+                                                <small><p><%=blog[4].date%></p></small>
                                             </div><!-- end meta -->
                                         </div><!-- end blog-box -->
                                     </div><!-- end col -->
 
-                                    <div class="col-lg-6">
+                                   <div class="col-lg-6">
                                         <div class="blog-box">
                                             <div class="post-media">
                                                 <a href="/single" title="">
-                                                    <img src="upload/tech_menu_06.jpg" alt="" class="img-fluid">
+                                                    <img src="<%=blog[5].banner%>" alt="" class="img-fluid">
                                                     <div class="hovereffect">
                                                         <span class=""></span>
                                                     </div><!-- end hover -->
                                                 </a>
                                             </div><!-- end media -->
                                             <div class="blog-meta">
-                                                <h4><a href="/single" title="">Nostalgia at work with family</a></h4>
-                                                <small><a href="blog-category-01.html" title="">News</a></small>
-                                                <small><a href="blog-category-01.html" title="">20 July, 2017</a></small>
+                                                <h4><a href="/single" title=""><%=blog[5].title%></a></h4>
+                                                <small><p><%=blog[5].tag%></p></small>
+                                                <small><p><%=blog[5].date%></p></small>
                                             </div><!-- end meta -->
                                         </div><!-- end blog-box -->
                                     </div><!-- end col -->
+
                                 </div><!-- end row -->
                             </div><!-- end custom-box -->
 
@@ -287,82 +285,33 @@
                                 </div><!-- end banner -->
                             </div><!-- end widget -->
 
-                            <div class="widget">
-                                <h2 class="widget-title">Trend Videos</h2>
-                                <div class="trend-videos">
-                                    <div class="blog-box">
-                                        <div class="post-media">
-                                            <a href="/single" title="">
-                                                <img src="upload/tech_video_01.jpg" alt="" class="img-fluid">
-                                                <div class="hovereffect">
-                                                    <span class="videohover"></span>
-                                                </div><!-- end hover -->
-                                            </a>
-                                        </div><!-- end media -->
-                                        <div class="blog-meta">
-                                            <h4><a href="/single" title="">We prepared the best 10 laptop presentations for you</a></h4>
-                                        </div><!-- end meta -->
-                                    </div><!-- end blog-box -->
+                            
 
-                                    <hr class="invis">
-
-                                    <div class="blog-box">
-                                        <div class="post-media">
-                                            <a href="/single" title="">
-                                                <img src="upload/tech_video_02.jpg" alt="" class="img-fluid">
-                                                <div class="hovereffect">
-                                                    <span class="videohover"></span>
-                                                </div><!-- end hover -->
-                                            </a>
-                                        </div><!-- end media -->
-                                        <div class="blog-meta">
-                                            <h4><a href="/single" title="">We are guests of ABC Design Studio - Vlog</a></h4>
-                                        </div><!-- end meta -->
-                                    </div><!-- end blog-box -->
-
-                                    <hr class="invis">
-
-                                    <div class="blog-box">
-                                        <div class="post-media">
-                                            <a href="/single" title="">
-                                                <img src="upload/tech_video_03.jpg" alt="" class="img-fluid">
-                                                <div class="hovereffect">
-                                                    <span class="videohover"></span>
-                                                </div><!-- end hover -->
-                                            </a>
-                                        </div><!-- end media -->
-                                        <div class="blog-meta">
-                                            <h4><a href="/single" title="">Both blood pressure monitor and intelligent clock</a></h4>
-                                        </div><!-- end meta -->
-                                    </div><!-- end blog-box -->
-                                </div><!-- end videos -->
-                            </div><!-- end widget -->
-
+                                    
                             <div class="widget">
                                 <h2 class="widget-title">Popular Posts</h2>
                                 <div class="blog-list-widget">
                                     <div class="list-group">
-                                        <a href="/single" class="list-group-item list-group-item-action flex-column align-items-start">
+                                        
+                                        <a href="/single?id=<%=blog[0].id%>" class="list-group-item list-group-item-action flex-column align-items-start">
                                             <div class="w-100 justify-content-between">
-                                                <img src="upload/tech_blog_08.jpg" alt="" class="img-fluid float-left">
-                                                <h5 class="mb-1">5 Beautiful buildings you need..</h5>
-                                                <small>12 Jan, 2016</small>
+                                                <img src="<%=blog[0].banner%>" alt="" class="img-fluid float-left">
+                                                <h5 class="mb-1"><%=(blog[0].title).slice(0,30)%>...</h5>
+                                                <small><%=blog[0].date%></small>
                                             </div>
                                         </a>
-
-                                        <a href="/single" class="list-group-item list-group-item-action flex-column align-items-start">
+                                        <a href="/single?id=<%=blog[1].id%>" class="list-group-item list-group-item-action flex-column align-items-start">
                                             <div class="w-100 justify-content-between">
-                                                <img src="upload/tech_blog_01.jpg" alt="" class="img-fluid float-left">
-                                                <h5 class="mb-1">Let's make an introduction for..</h5>
-                                                <small>11 Jan, 2016</small>
+                                                <img src="<%=blog[1].banner%>" alt="" class="img-fluid float-left">
+                                                <h5 class="mb-1"><%=(blog[1].title).slice(0,30)%>...</h5>
+                                                <small><%=blog[1].date%></small>
                                             </div>
                                         </a>
-
-                                        <a href="/single" class="list-group-item list-group-item-action flex-column align-items-start">
-                                            <div class="w-100 last-item justify-content-between">
-                                                <img src="upload/tech_blog_03.jpg" alt="" class="img-fluid float-left">
-                                                <h5 class="mb-1">Did you see the most beautiful..</h5>
-                                                <small>07 Jan, 2016</small>
+                                        <a href="/single?id=<%=blog[2].id%>" class="list-group-item list-group-item-action flex-column align-items-start">
+                                            <div class="w-100 justify-content-between">
+                                                <img src="<%=blog[2].banner%>" alt="" class="img-fluid float-left">
+                                                <h5 class="mb-1"><%=(blog[1].title).slice(0,30)%>...</h5>
+                                                <small><%=blog[2].date%></small>
                                             </div>
                                         </a>
                                     </div>
@@ -370,50 +319,12 @@
                             </div><!-- end widget -->
 
                             <div class="widget">
-                                <h2 class="widget-title">Recent Reviews</h2>
+                                <h2 class="widget-title">Banner</h2>
                                 <div class="blog-list-widget">
                                     <div class="list-group">
-                                        <a href="/single" class="list-group-item list-group-item-action flex-column align-items-start">
-                                            <div class="w-100 justify-content-between">
-                                                <img src="upload/tech_blog_02.jpg" alt="" class="img-fluid float-left">
-                                                <h5 class="mb-1">Banana-chip chocolate cake recipe..</h5>
-                                                <span class="rating">
-                                                    <i class="fa fa-star"></i>
-                                                    <i class="fa fa-star"></i>
-                                                    <i class="fa fa-star"></i>
-                                                    <i class="fa fa-star"></i>
-                                                    <i class="fa fa-star"></i>
-                                                </span>
-                                            </div>
-                                        </a>
+                                       
 
-                                        <a href="/single" class="list-group-item list-group-item-action flex-column align-items-start">
-                                            <div class="w-100 justify-content-between">
-                                                <img src="upload/tech_blog_03.jpg" alt="" class="img-fluid float-left">
-                                                <h5 class="mb-1">10 practical ways to choose organic..</h5>
-                                                <span class="rating">
-                                                    <i class="fa fa-star"></i>
-                                                    <i class="fa fa-star"></i>
-                                                    <i class="fa fa-star"></i>
-                                                    <i class="fa fa-star"></i>
-                                                    <i class="fa fa-star"></i>
-                                                </span>
-                                            </div>
-                                        </a>
 
-                                        <a href="/single" class="list-group-item list-group-item-action flex-column align-items-start">
-                                            <div class="w-100 last-item justify-content-between">
-                                                <img src="upload/tech_blog_07.jpg" alt="" class="img-fluid float-left">
-                                                <h5 class="mb-1">We are making homemade ravioli..</h5>
-                                                <span class="rating">
-                                                    <i class="fa fa-star"></i>
-                                                    <i class="fa fa-star"></i>
-                                                    <i class="fa fa-star"></i>
-                                                    <i class="fa fa-star"></i>
-                                                    <i class="fa fa-star"></i>
-                                                </span>
-                                            </div>
-                                        </a>
                                     </div>
                                 </div><!-- end blog-list -->
                             </div><!-- end widget -->
