--- a/views/tech-single.ejs
+++ b/views/tech-single.ejs
@@ -143,7 +143,7 @@
                                                 <a href="/single?id=<%=blog[6].id%>" class="list-group-item list-group-item-action flex-column align-items-start">
                                                     <div class="w-100 justify-content-between text-right">
                                                         <img src="<%=blog[6].banner%>" alt="" class="img-fluid float-right">
-                                                        <h5 class="mb-1">5<%=blog[6].title%></h5>
+                                                        <h5 class="mb-1"><%=blog[6].title%></h5>
                                                         
                                                     </div>
                                                 </a>
@@ -157,7 +157,7 @@
                                                 <a href="/single?id=<%=blog[7].id%>" class="list-group-item list-group-item-action flex-column align-items-start">
                                                     <div class="w-100 justify-content-between">
                                                         <img src="<%=blog[7].banner%>" alt="" class="img-fluid float-left">
-                                                        <h5 class="mb-1">5<%=blog[7].title%></h5>
+                                                        <h5 class="mb-1"><%=blog[7].title%></h5>
                                                         
                                                     </div>
                                                 </a>
