--- a/views/index.ejs
+++ b/views/index.ejs
@@ -62,7 +62,7 @@
                                  <div class="shadoweffect">
                                     <div class="shadow-desc">
                                         <div class="blog-meta">
-                                            <span class="bg-orange"><a href="/<%=(data[0].tag).toLowerCase()%>" title=""><%=data[0].tag%></a></span>
+                                            <span class="bg-orange"><a href="/<%=data[0].tag%>" title=""><%=(data[1].tag).toUpperCase()%></a></span>
                                             <h4><a href="/single?id=<%=data[0].id%>" title=""><%=data[0].title%></a></h4>
                                             <small><a href="/single?id=<%=data[0].id%>" title=""><%=data[0].date%></a></small>
                                             <small><a href="/author" title="">by <%=data[0].by%></a></small>
@@ -79,7 +79,7 @@
                                  <div class="shadoweffect">
                                     <div class="shadow-desc">
                                         <div class="blog-meta">
-                                            <span class="bg-orange"><a href="/<%=(data[1].tag).toLowerCase()%>" title=""><%=data[1].tag%></a></span>
+                                            <span class="bg-orange"><a href="/<%=(data[1].tag)%>" title=""><%=(data[1].tag).toUpperCase()%></a></span>
                                             <h4><a href="/single?id=<%=data[1].id%>" title=""><%=data[1].title%></a></h4>
                                             <small><a href="/single?id=<%=data[1].id%>" title=""><%=data[1].date%></a></small>
                                             <small><a href="/author" title="">by <%=data[1].by%></a></small>
@@ -102,7 +102,7 @@
                                 <h4 class="pull-left">Recent News <a href="#"><i class="fa fa-rss"></i></a></h4>
                             </div><!-- end blog-top -->
 
-                            <% for(let i =3; i<6;i++){%>
+                            <% for(let i =2; i<6;i++){%>
                             <section class="blog-list clearfix">
                                 <div class="blog-box row">
                                     <div class="col-md-4">
