--- a/views/Partials/_navbar.ejs
+++ b/views/Partials/_navbar.ejs
@@ -37,11 +37,11 @@
                                                                         <img src="<%=tagValue[3][i].banner%>" alt="" class="img-fluid">
                                                                         <div class="hovereffect">
                                                                         </div><!-- end hover -->
-                                                                        <span class="menucat"><%=tagKey[3]%></span>
+                                                                        <span class="menucat"><%=tagKey[3].toUpperCase()%></span>
                                                                     </a>
                                                                 </div><!-- end media -->
                                                                 <div class="blog-meta">
-                                                                    <h4><a href="/single?id=<%=tagValue[3][i].id%>" title=""><%=tagValue[3][i].title%></a></h4>
+                                                                    <h4><a href="/single?id=<%=tagValue[3][i].id%>" title=""><%=(tagValue[3][i].title).slice(0,30)%>...</a></h4>
                                                                 </div><!-- end meta -->
                                                             </div><!-- end blog-box -->
                                                         </div>
@@ -65,11 +65,11 @@
                                                                         <img src="<%=tagValue[0][i].banner%>" alt="" class="img-fluid">
                                                                         <div class="hovereffect">
                                                                         </div><!-- end hover -->
-                                                                        <span class="menucat"><%=tagKey[0]%></span>
+                                                                        <span class="menucat"><%=tagKey[0].toUpperCase()%></span>
                                                                     </a>
                                                                 </div><!-- end media -->
                                                                 <div class="blog-meta">
-                                                                    <h4><a href="/single?id=<%=tagValue[0][i].id%>" title=""><%=tagValue[0][i].title%></a></h4>
+                                                                    <h4><a href="/single?id=<%=tagValue[0][i].id%>" title=""><%=(tagValue[0][i].title).slice(0,30)%>...</a></h4>
                                                                 </div><!-- end meta -->
                                                             </div><!-- end blog-box -->
                                                         </div>
@@ -90,11 +90,11 @@
                                                                         <img src="<%=tagValue[2][i].banner%>" alt="" class="img-fluid">
                                                                         <div class="hovereffect">
                                                                         </div><!-- end hover -->
-                                                                        <span class="menucat"><%=tagKey[2]%></span>
+                                                                        <span class="menucat"><%=tagKey[2].toUpperCase()%></span>
                                                                     </a>
                                                                 </div><!-- end media -->
                                                                 <div class="blog-meta">
-                                                                    <h4><a href="/single?id=<%=tagValue[2][i].id%>" title=""><%=tagValue[2][i].title%></a></h4>
+                                                                    <h4><a href="/single?id=<%=tagValue[2][i].id%>" title=""><%=(tagValue[2][i].title).slice(0,30)%>...</a></h4>
                                                                 </div><!-- end meta -->
                                                             </div><!-- end blog-box -->
                                                         </div>
@@ -112,11 +112,11 @@
                                                                         <img src="<%=tagValue[1][i].banner%>" alt="" class="img-fluid">
                                                                         <div class="hovereffect">
                                                                         </div><!-- end hover -->
-                                                                        <span class="menucat"><%=tagKey[1]%></span>
+                                                                        <span class="menucat"><%=tagKey[1].toUpperCase()%></span>
                                                                     </a>
                                                                 </div><!-- end media -->
                                                                 <div class="blog-meta">
-                                                                    <h4><a href="/single?id=<%=tagValue[1][i].id%>" title=""><%=tagValue[1][i].title%></a></h4>
+                                                                    <h4><a href="/single?id=<%=tagValue[1][i].id%>" title=""><%=(tagValue[1][i].title).slice(0,30)%>...</a></h4>
                                                                 </div><!-- end meta -->
                                                             </div><!-- end blog-box -->
                                                         </div>
