--- a/views/index.ejs
+++ b/views/index.ejs
@@ -130,15 +130,7 @@
 
                                   <%}%>
 
-                                <div class="row">
-                                    <div class="col-lg-10 offset-lg-1">
-                                        <div class="banner-spot clearfix">
-                                            <div class="banner-img">
-                                                <img src="upload/banner_02.jpg" alt="" class="img-fluid">
-                                            </div><!-- end banner-img -->
-                                        </div><!-- end banner -->
-                                    </div><!-- end col -->
-                                </div><!-- end row -->
+                                
 
                                 <hr class="invis">
                                 <% for(let i =6; i<11;i++){%>
@@ -196,13 +188,7 @@
 
                     <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
                         <div class="sidebar">
-                            <div class="widget">
-                                <div class="banner-spot clearfix">
-                                    <div class="banner-img">
-                                        <img src="upload/banner_07.jpg" alt="" class="img-fluid">
-                                    </div><!-- end banner-img -->
-                                </div><!-- end banner -->
-                            </div><!-- end widget -->
+                           
 
                             
 
@@ -237,16 +223,15 @@
                                 </div><!-- end blog-list -->
                             </div><!-- end widget -->
 
-                            <div class="widget">
-                                <h2 class="widget-title">B </h2>
+                            <!-- <div class="widget">
+                                <h2 class="widget-title"> </h2>
                                 <div class="blog-list-widget">
                                     <div class="list-group">
                                        
 
                                     </div>
-                                </div><!-- end blog-list -->
-                            </div><!-- end widget -->
-
+                                </div>
+                            </div> -->
                             <div class="widget">
                                 <h2 class="widget-title">Follow Us</h2>
 
@@ -276,13 +261,7 @@
                                 </div>
                             </div><!-- end widget -->
 
-                            <div class="widget">
-                                <div class="banner-spot clearfix">
-                                    <div class="banner-img">
-                                        <img src="upload/banner_03.jpg" alt="" class="img-fluid">
-                                    </div><!-- end banner-img -->
-                                </div><!-- end banner -->
-                            </div><!-- end widget -->
+                           
                         </div><!-- end sidebar -->
                     </div><!-- end col -->
                 </div><!-- end row -->
