--- a/views/tech-single.ejs
+++ b/views/tech-single.ejs
@@ -59,7 +59,7 @@
                         <div class="page-wrapper">
                             <div class="blog-title-area text-center">
                                 <ol class="breadcrumb hidden-xs-down">
-                                    <li class="breadcrumb-item"><a href="#">Home</a></li>
+                                    <li class="breadcrumb-item"><a href="/">Home</a></li>
                                     <li class="breadcrumb-item"><a href="#">Blog</a></li>
                                     <li class="breadcrumb-item active"><%=data.title%></li>
                                 </ol>
@@ -266,9 +266,9 @@
                                 <div class="row">
                                     <div class="col-lg-12">
                                         <form method="post" class="form-wrapper">
-                                            <input type="text" class="form-control" name="name" placeholder="Your name">
-                                            <input type="text" class="form-control" name="email" placeholder="Email address">
-                                            <textarea class="form-control"          name ="comment" placeholder="Your comment"></textarea>
+                                            <input type="text" class="form-control" name="name" required placeholder="Your name">
+                                            <input type="text" class="form-control" name="email" required placeholder="Email address">
+                                            <textarea class="form-control"          name ="comment" required placeholder="Your comment"></textarea>
                                             <button type="submit" class="btn btn-primary">Submit Comment</button>
                                         </form>
                                     </div>
