--- a/views/Partials/_footer.ejs
+++ b/views/Partials/_footer.ejs
@@ -47,7 +47,7 @@
                     <div class="link-widget">
                         <ul>
                             <li><a href="https://latrosoft.in/">About us</a></li>
-                            <li><a href="https://latrosoft.in/carrer">Write for us</a></li>
+                            <li><a href="https://latrosoft.in/career.html">Write for us</a></li>
                             <li><a href="https://latrosoft.in/">Trademark</a></li>
                             <li><a href="https://latrosoft.in/">License & Help</a></li>
                         </ul>
