--- a/views/tech-single.ejs
+++ b/views/tech-single.ejs
@@ -14,6 +14,18 @@
     <meta name="description" content="<%=data.short%>">
     <meta name="author" content="<%=data.by%>">
     
+
+
+
+    
+    <meta property="og:title" content="<%=data.title%>" />
+    <meta property="og:type" content="blog"/>
+    <meta property="og:image" content="<%=data.banner%>" />
+
+
+
+
+
     <!-- Site Icons -->
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
     <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
